# materials

./: .gitattributes  .gitignore  .talismanrc  app.py  pyproject.toml  requirements.txt
.github/workflows/: scan-code.yml
data/clintox/: clintox_predictions.csv  clintox_test.csv  clintox_train.csv  clintox_validation.csv  download_clintox.py
examples/: battery_example.ipynb  battery_example.py  download_clintox.py  fm4m_example.ipynb  multi_model.py  single_model.py
fm4m/: __init__.py  app.py  constants.py  fm4m.py  main.py  path_utils.py
fm4m/config/: constants.py  datasets.py  model_files.py  repository.py
fm4m/logger/: logger.py  logging.yaml
fm4m/models/: model.py
fm4m/models/mhg_model/: load.py
fm4m/models/selfies_ted/: __init__.py  load.py
fm4m/models/smi_ssed/finetune/: finetune_classification.py  finetune_classification_multitask.py  trainers.py
fm4m/models/smi_ssed/finetune/smi_ssed/: load.py
fm4m/models/smi_ssed/finetune/smi_ssed/bace/: run_finetune_bace.sh
fm4m/models/smi_ssed/finetune/smi_ssed/bbbp/: run_finetune_bbbp.sh
fm4m/models/smi_ssed/finetune/smi_ssed/clintox/: run_finetune_clintox.sh
fm4m/models/smi_ssed/finetune/smi_ssed/qm8/: run_finetune_E1-CAM.sh  run_finetune_E1-CC2.sh  run_finetune_E2-CC2.sh  run_finetune_E2-PBE0.sh  run_finetune_f1-CAM.sh  run_finetune_f1-PBE0.sh
fm4m/models/smi_ssed/finetune/smi_ssed/qm9/: run_finetune_cv.sh  run_finetune_g298.sh  run_finetune_lumo.sh  run_finetune_mu.sh  run_finetune_u0.sh  run_finetune_u298.sh
fm4m/models/smi_ssed/training/: run_model_training.sh  send_job.slurm  train_model_D.py  trainer.py
fm4m/models/smi_ssed/training/smi_ssed/: load.py
fm4m/models/smi_ted/: requirements.txt
fm4m/models/smi_ted/finetune/: finetune_classification.py  trainers.py
fm4m/models/smi_ted/finetune/smi_ted_light/: load.py
fm4m/models/smi_ted/smi_ted_light/: load.py
fm4m/tests/: test_fm4m.py  test_regressor.py
models/smi_ted/inference/smi_ted_large/: load.py
src/models/: __init__.py  fm4m.py  logger.py
src/models/selfies_ted/: README.md  requirements.txt
src/models/smi_ssed/: .gitignore  README.md  requirements.txt
src/models/smi_ssed/finetune/: args.py  finetune_regression.py
src/models/smi_ssed/finetune/smi_ssed/esol/: run_finetune_esol.sh
src/models/smi_ssed/finetune/smi_ssed/freesolv/: run_finetune_freesolv.sh
src/models/smi_ssed/finetune/smi_ssed/hiv/: run_finetune_hiv.sh
src/models/smi_ssed/finetune/smi_ssed/lipo/: run_finetune_lipo.sh
src/models/smi_ssed/finetune/smi_ssed/qm8/: run_finetune_E1-PBE0.sh  run_finetune_E2-CAM.sh  run_finetune_f1-CC2.sh  (+3 more)
src/models/smi_ssed/inference/smi_ssed/: load.py
src/models/smi_ssed/notebooks/: smi_ssed_encoder_decoder_example.ipynb  smi_ssed_frozen_inference_example1.ipynb  smi_ssed_frozen_inference_example2.ipynb
src/models/smi_ssed/training/: args.py  train_model_ED.py  utils.py
src/models/smi_ted/finetune/: args.py  finetune_classification_multitask.py  finetune_regression.py
src/models/smi_ted/finetune/smi_ted_large/: load.py
src/models/smi_ted/inference/smi_ted_light/: load.py
src/models/smi_ted/smi_ted_light/: load.py
(+8 files in other folders)
