[tool.poetry]
name = "fm4m"
version = "0.1.0"
description = ""
authors = ["Javier Matias-Cabrera <javier@javiermatias.com>"]
#packages = [
#    { include = "fm4m", from = "src" },
#]


#    _      ___  _   _  _____  _____  ____
#   | |    |_ _|| \ | ||_   _|| ____||  _ \
#   | |     | | |  \| |  | |  |  _|  | |_) |
#   | |___  | | | |\  |  | |  | |___ |  _ <
#   |_____||___||_| \_|  |_|  |_____||_| \_\
#

[tool.black]
line-length = 100
target-version = ['py311']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/notebooks  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

#     ____  ___   ____   _____      _     _   _     _     _   __   __ ____  ___  ____
#    / ___|/ _ \ |  _ \ | ____|    / \   | \ | |   / \   | |  \ \ / // ___||_ _|/ ___|
#   | |   | | | || | | ||  _|     / _ \  |  \| |  / _ \  | |   \ V / \___ \ | | \___ \
#   | |___| |_| || |_| || |___   / ___ \ | |\  | / ___ \ | |___ | |   ___) || |  ___) |
#    \____|\___/ |____/ |_____| /_/   \_\|_| \_|/_/   \_\|_____||_|  |____/|___||____/
#
[tool.flake8]
count = true


#    _   _   _   _   ___   _____     _____   _____   ____    _____   ____
#   | | | | | \ | | |_ _| |_   _|   |_   _| | ____| / ___|  |_   _| / ___|
#   | | | | |  \| |  | |    | |       | |   |  _|   \___ \    | |   \___ \
#   | |_| | | |\  |  | |    | |       | |   | |___   ___) |   | |    ___) |
#    \___/  |_| \_| |___|   |_|       |_|   |_____| |____/    |_|   |____/
#

[tool.pytest.ini_options]
addopts = "-p no:warnings --ignore=triton"
markers = [
    "integration",
    "unit",
    "aat"
]

#    ____   _____  ____   _____  _   _  ____   _____  _   _   ____  ___  _____  ____
#   |  _ \ | ____||  _ \ | ____|| \ | ||  _ \ | ____|| \ | | / ___||_ _|| ____|/ ___|
#   | | | ||  _|  | |_) ||  _|  |  \| || | | ||  _|  |  \| || |     | | |  _|  \___ \
#   | |_| || |___ |  __/ | |___ | |\  || |_| || |___ | |\  || |___  | | | |___  ___) |
#   |____/ |_____||_|    |_____||_| \_||____/ |_____||_| \_| \____||___||_____||____/
#

[tool.poetry.dependencies]
python = "~3.11"

aiohttp = ">=3.10.11"
datasets = ">=2.13.1"
evaluate = ">=0.4.0"
gradio = "~5.9"
matplotlib = "~3.9"
mordred = "~1.2"
networkx = ">=2.8"
numpy = ">=1.26.1,<2.0.0"
pandas = ">=1.5.3"
pyarrow = ">=14.0.1"
rdkit = "~2022.9.4"
requests = ">=2.32.2"
scikit-learn = "~1.5.0"
scipy = ">=1.12.0"
selfies = ">=2.1.0"
torch = ">=2.5.0"
torch-geometric = ">=2.3.1"
torch-optimizer = "^0.3.0"
torchinfo = ">=1.8.0"
tqdm = ">=4.66.4"
transformers = ">=4.38"
triton = { path = "triton/python", develop = true }
umap-learn = "==0.5.*"
urllib3 = ">=2.2.2"
xgboost = "~1.6"
zipp = ">=3.19.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = ">=1.5.1"
flake8-functions = ">=0.0.8"
flake8-pyproject = "^1.2.3"
black = { extras = ["d"], version = ">=23.10.1" }
pytest = "^8.3.4"
notebook = "^7.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
